[package]
name = "wiki-changes"
version = "0.1.0"
authors = ["Joshua Benuck <joshua_benuck@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "*"
reqwest = "*"
clap = "*"
serde = "*"
serde_json = "*"
failure = "*"
chrono = "*"