[package]
name = "wiki-rust"
version = "0.1.0"
authors = ["Joshua Benuck <joshua_benuck@yahoo.com>"]
edition = "2018"
default-run = "wiki-changes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "*"
reqwest = "*"
clap = "*"
serde = "*"
serde_json = "*"
failure = "*"
chrono = "*"